--- a/styles/globals.scss
+++ b/styles/globals.scss
@@ -7,5 +7,6 @@
     font-family: 'JetBrains Mono', monospace;
 }
 body{
+    max-width: 100vw;
     background-color: styles.$primary-background;
 }
